<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="25sp"
    android:theme="@style/CustomizedTheme">

    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/CustomizedTheme"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="25sp"
            android:theme="@style/CustomizedTheme">

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typed_address"
                android:textSize="36sp"
                android:theme="@style/CustomizedTheme"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textColor="@color/colorGreyer"
                android:textSize="14sp"
                android:theme="@style/CustomizedTheme"
                app:fontFamily="@font/montserrat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overview_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingBottom="100sp"
            android:theme="@style/CustomizedTheme">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weather_status"
                android:textSize="30sp"
                android:textStyle="italic"
                android:theme="@style/CustomizedTheme"
                app:fontFamily="@font/montserrat" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/temperature_now"
                android:textSize="90sp"
                android:theme="@style/CustomizedTheme"
                app:fontFamily="@font/montserrat" />

            <LinearLayout
                android:id="@+id/min_max_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:theme="@style/CustomizedTheme">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp_status"
                    android:theme="@style/CustomizedTheme"
                    app:fontFamily="@font/montserrat" />

                <Space
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomizedTheme" />

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp_status"
                    android:theme="@style/CustomizedTheme"
                    app:fontFamily="@font/montserrat" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:theme="@style/CustomizedTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/CustomizedTheme"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8sp"
                    android:theme="@style/CustomizedTheme">

                    <ImageView
                        android:id="@+id/sunrise_image_view"
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:background="@drawable/ic_arrow_drop_up_black_24dp"
                        android:contentDescription="sunrises"
                        android:src="@drawable/sunrise"
                        android:theme="@style/CustomizedTheme"
                        android:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"
                        android:theme="@style/CustomizedTheme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />

                    <TextView
                        android:id="@+id/sunrise_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise_value"
                        android:textSize="16sp"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />
                </LinearLayout>

                <Space
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomizedTheme" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:theme="@style/CustomizedTheme">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:background="@drawable/ic_arrow_drop_down_black_24dp"
                        android:src="@drawable/sunrise"
                        android:theme="@style/CustomizedTheme"
                        android:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"
                        android:theme="@style/CustomizedTheme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset_value"
                        android:textSize="16sp"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />
                </LinearLayout>

                <Space
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomizedTheme" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8sp"
                    android:theme="@style/CustomizedTheme">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/wind"
                        android:theme="@style/CustomizedTheme"
                        android:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5sp"
                        android:theme="@style/CustomizedTheme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_value"
                        android:textSize="16sp"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10sp"
                android:theme="@style/CustomizedTheme" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/CustomizedTheme"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8sp"
                    android:theme="@style/CustomizedTheme">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@drawable/pressure"
                        android:theme="@style/CustomizedTheme"
                        android:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5sp"
                        android:theme="@style/CustomizedTheme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure_value"
                        android:textSize="16sp"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />
                </LinearLayout>

                <Space
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomizedTheme" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8sp"
                    android:theme="@style/CustomizedTheme">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="Humidity"
                        android:src="@drawable/humidity"
                        android:theme="@style/CustomizedTheme"
                        android:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5sp"
                        android:theme="@style/CustomizedTheme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_value"
                        android:textSize="16sp"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />
                </LinearLayout>

                <Space
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomizedTheme" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8sp"
                    android:theme="@style/CustomizedTheme">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="information"
                        android:src="@drawable/info"
                        android:theme="@style/CustomizedTheme"
                        android:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp"
                        android:theme="@style/CustomizedTheme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resource_from"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resource_origin"
                        android:textColor="#541C5E"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:theme="@style/CustomizedTheme"
                        app:fontFamily="@font/montserrat" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@style/CustomizedTheme"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Something went wrong, try again"
        android:theme="@style/CustomizedTheme"
        android:visibility="gone" />

</RelativeLayout>